--- a/backend/views/listings/index.ejs
+++ b/backend/views/listings/index.ejs
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Airbnb</title>
-</head>
+<%- layout("/layouts/biolerplate")%>
 <body>
     <h3>All Listings</h3>
-    <form method="GET" action="/listings/new">
+    <!-- <form method="GET" action="/listings/new">
         <button>Create Listing</button>
-    </form>
+    </form> -->
     <ul>
        <%  for(listing of allListings){ %>
             <li>
@@ -19,4 +13,3 @@
     </ul>
     
 </body>
-</html>
