--- a/backend/views/listings/new.ejs
+++ b/backend/views/listings/new.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Airbnb</title>
-</head>
+<%- layout("/layouts/biolerplate.ejs") %>
 <body>
     <h3>Add your listing</h3>
     <form method="POST" action="/listings">
@@ -24,4 +18,3 @@
     </form>
     
 </body>
-</html>
