--- a/backend/views/listings/show.ejs
+++ b/backend/views/listings/show.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Airbnb</title>
-</head>
+<%- layout("/layouts/biolerplate") %>
 <body>
     <h3>Listing Details:</h3>
     <li><%= listDetails.title %></li>
