--- a/backend/public/css/style.css
+++ b/backend/public/css/style.css
@@ -1,5 +1,11 @@
 body{
      font-family: "Plus Jakarta Sans", sans-serif;
+     display: flex;
+     flex-direction: column;
+     min-height: 100vh;
+}
+.container{
+    flex: 1;
 }
 .navbar{
     background-color: white;
@@ -74,4 +80,23 @@ padding: 0 !important;
 .card-img-overlay:hover{
     opacity: 0.2;
     background-color: white;
+}
+
+
+.add-btn{
+    background-color: #fe424d !important;
+    border: none !important;
+}
+
+.show-img{
+    height: 30vh;
+}
+
+
+.btns{
+    display: flex;
+}
+.show-card{
+    padding-left: 0;
+    padding-right: 0;
 }
