--- a/backend/views/listings/show.ejs
+++ b/backend/views/listings/show.ejs
@@ -2,13 +2,12 @@
 <body>
      <div class="row">
          <div class="col-8 offset-3 mt-3">
-             <h3>Listing Details:</h3>
+             <h3><%= listDetails.title %></h3>
          </div>
-    <div class="card col-6 offset-3 show-card">
+    <div class="card col-6 offset-3 show-card listing-card">
          <img src="<%= listDetails.image %>" class="card-img-top show-img" alt="...">
         <div class="card-body">
             <p class="card-text">
-                <b><%= listDetails.title %></b><br>
                 <%= listDetails.description %><br>
                 &#8377;<%= listDetails.price.toLocaleString("en-IN") %><br>
                 <%= listDetails.location %><br>
@@ -21,9 +20,47 @@
             <a href="/listings/<%= listDetails._id %>/edit" class="btn btn-dark offset-3 add-btn">Edit</a>
    
             <form method="POST" action="/listings/<%= listDetails._id %>?_method=DELETE">
-                <button class="btn btn-dark offset-5 add-btn">Delete</button>
+                <button class="btn btn-dark offset-3 add-btn">Delete</button>
             </form>
     </div>
+    <div class="col-8 offset-3 mb-3">
+        <hr/>
+        <h3>Leave a review</h3>
+        <form method="POST" action="/listings/<%= listDetails._id %>/reviews" novalidate class="needs-validation">
+            <div class="mt-3 mb-3">
+                <label for="rating" class="form-label">Rating</label>
+                <input type="range" min="1" max="5" name="review[rating]" class="form-range">
+            </div>
+            <div class="mt-3 mb-3">
+                <label for="comment" class="form-label">Comments</label>
+                <textarea  rows="5" cols="20" class="form-control" name="review[comment]" class="form-control" required></textarea>
+                <div class="invalid-feedback">Please fill the comment!</div>
+            </div>
+            <button class="btn btn-outline-dark">Submit</button>
+        </form>
     </div>
+    
+
+    <div class=" row row-5 col-9 offset-3 mb-3">
+        <hr/>
+        <p><b>All reviews</b></p>
+        <div class="row row-cols-4">
+        <%for(review of listDetails.reviews){%>
+            <div class="card col-4 mb-3 ms-3">
+                <div class="card-body">
+                    <h5 class="card-title">Steve Rogers</h5>
+                    <p class="card-text"><%= review.comment %></p>
+                    <p class="card-text"><%= review.rating %> stars</p>
+                </div>
+                <form class="mb-3 mt-1" method="post" action="/listings/<%=listDetails._id %>/reviews/<%= review._id %>?_method=DELETE">
+                    <button class="btn btn-dark btn-sm">Delete</button>
+                </form>
+            </div>
+
+            
+        <% } %>  
+    </div>
+    </div>
+    </div>
+
 </body>
-</html>
