--- a/backend/views/signup/signin.ejs
+++ b/backend/views/signup/signin.ejs
@@ -7,7 +7,7 @@
                 <div class="mb-3">
                   <label for="username" class="form-label">Username</label>
                   <input name="username" id="username" type="text" class="form-control" required>
-                  <div class="valid-feedback">Looks Good!</div>
+                  <div class="valid-feedback"></div>
                 </div>
                 <div class="mb-3">
                   <label for="password" class="form-label">Password</label>
