--- a/backend/views/listings/show.ejs
+++ b/backend/views/listings/show.ejs
@@ -7,15 +7,15 @@
     <div class="card col-6 offset-3 show-card listing-card">
          <img src="<%= listDetails.image %>" class="card-img-top show-img" alt="...">
         <div class="card-body">
-            <p class="card-text">
-                <%= listDetails.description %><br>
-                &#8377;<%= listDetails.price.toLocaleString("en-IN") %><br>
-                <%= listDetails.location %><br>
-                <%= listDetails.country %><br>
-            </p>
+                <p class="card-text">Owned By-<%= listDetails.owner.username %></p>
+                <p class="card-text"><%= listDetails.description %></p>
+                <p class="card-text">&#8377;<%= listDetails.price.toLocaleString("en-IN") %></p>
+                <p class="card-text"><%= listDetails.location %></p>
+               <p class="card-text"><%= listDetails.country %></p>
         </div>
     </div>
     <br/>
+    <% if(currUser && listDetails.owner.equals(currUser._id)) {%>
     <div class="btns">
             <a href="/listings/<%= listDetails._id %>/edit" class="btn btn-dark offset-3 add-btn">Edit</a>
    
@@ -23,7 +23,10 @@
                 <button class="btn btn-dark offset-3 add-btn">Delete</button>
             </form>
     </div>
+    <% } %>
+
     <div class="col-8 offset-3 mb-3">
+        <% if(currUser) {%>
         <hr/>
         <h3>Leave a review</h3>
         <form method="POST" action="/listings/<%= listDetails._id %>/reviews" novalidate class="needs-validation">
@@ -38,6 +41,7 @@
             </div>
             <button class="btn btn-outline-dark">Submit</button>
         </form>
+        <% } %>
     </div>
     
 
