--- a/backend/views/includes/navbar.ejs
+++ b/backend/views/includes/navbar.ejs
@@ -7,8 +7,8 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link " aria-current="page" href="/">Home</a>
-        <a class="nav-link" href="/listings"> All Listings</a>
-        <a class="nav-link" href="/listings/new">Add Listing</a>
+        <a class="nav-link" href="/listings"> All Property</a>
+        <a class="nav-link" href="/listings/new">Add Property</a>
       </div>
       <div class="navbar-nav ms-auto">
         <% if(!currUser){%>
