--- a/backend/views/listings/new.ejs
+++ b/backend/views/listings/new.ejs
@@ -4,7 +4,7 @@
         <div class="col-8 offset-2">
             <br><br>
        <h3>Add your listing</h3>
-     <form method="POST" action="/listings" novalidate class="needs-validation">
+     <form method="POST" action="/listings" novalidate class="needs-validation" enctype="multipart/form-data">
         <div class="mb-3">
             <label for="title" class="form-label">Title</label>
             <input name="listing[title]" placeholder="enter title" type="text" class="form-control" required>
@@ -18,7 +18,7 @@
         </div>     
         <div class="mb-3">
             <label for="image" class="form-label">Image</label>
-             <input name="listing[image]" placeholder="enter image URL/Link" type="text" class="form-control">
+             <input name="listing[image]"  type="file" class="form-control">
 
         </div>
         <div class="row">
