--- a/backend/views/listings/show.ejs
+++ b/backend/views/listings/show.ejs
@@ -31,8 +31,21 @@
         <h3>Leave a review</h3>
         <form method="POST" action="/listings/<%= listDetails._id %>/reviews" novalidate class="needs-validation">
             <div class="mt-3 mb-3">
-                <label for="rating" class="form-label">Rating</label>
-                <input type="range" min="1" max="5" name="review[rating]" class="form-range">
+                <label for="rating" class="form-label">Rating</label>            
+                <fieldset class="starability-slot">
+                    <legend>First rating:</legend>
+                    <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
+                    <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                    <label for="first-rate1" title="Terrible">1 star</label>
+                    <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                    <label for="first-rate2" title="Not good">2 stars</label>
+                    <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                    <label for="first-rate3" title="Average">3 stars</label>
+                    <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                    <label for="first-rate4" title="Very good">4 stars</label>
+                    <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                    <label for="first-rate5" title="Amazing">5 stars</label>
+              </fieldset>
             </div>
             <div class="mt-3 mb-3">
                 <label for="comment" class="form-label">Comments</label>
@@ -43,6 +56,7 @@
         </form>
         <% } %>
     </div>
+
     
 
     <div class=" row row-5 col-9 offset-3 mb-3">
@@ -53,8 +67,8 @@
             <div class="card col-4 mb-3 ms-3">
                 <div class="card-body">
                     <h5 class="card-title">@<%= review.author.username %></h5>
+                    <p class="starability-result card-text" data-rating="<%= review.rating %>"></p>
                     <p class="card-text"><%= review.comment %></p>
-                    <p class="card-text"><%= review.rating %> stars</p>
                 </div>
                 <form class="mb-3 mt-1" method="post" action="/listings/<%=listDetails._id %>/reviews/<%= review._id %>?_method=DELETE">
                     <button class="btn btn-dark btn-sm">Delete</button>
