--- a/backend/views/signup/signin.ejs
+++ b/backend/views/signup/signin.ejs
@@ -14,7 +14,7 @@
                   <input name="password" id="password" type="password" class="form-control" required>
                   <div class="valid-feedback"></div>
                 </div>
-                <button class="btn btn-success">Signup</button>
+                <button class="btn btn-success">Login</button>
             </form>
         </div>
 </div>
