--- a/backend/views/includes/navbar.ejs
+++ b/backend/views/includes/navbar.ejs
@@ -1,3 +1,24 @@
+<style>
+  .btn-search{
+    background-color: #fe424d;
+    color: #fff;
+    border-radius: 25px;
+    padding: 0 1rem 0 1rem;
+  }
+  .btn-search:hover{
+    background-color: #fe424d;
+    color: #fff;
+  }
+  .btn-search i{
+    display: inline;
+    margin-right: 0.5rem;
+  }
+  .inp-search{
+    border-radius: 25px;
+    padding: 0.5rem 3rem 0.5rem 3rem ;
+    font-size: 0.9rem;
+  }
+</style>
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"><i class="fa-brands fa-airbnb"></i>airbnb</a>
@@ -6,14 +27,19 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link " aria-current="page" href="/">Home</a>
-        <a class="nav-link" href="/listings"> All Property</a>
-        <a class="nav-link" href="/listings/new">Add Property</a>
+        <a class="nav-link" href="/listings">Explore</a>
       </div>
       <div class="navbar-nav ms-auto">
+        <form class="d-flex" role="search">
+          <input class="form-control me-2 inp-search" type="search" placeholder="Search Destinations" aria-label="Search"/>
+          <button class="btn btn-search" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search</button>
+       </form>
+      </div>
+      <div class="navbar-nav ms-auto">
+        <a class="nav-link" href="/listings/new">Airbnb your home</a>
         <% if(!currUser){%>
-        <a class="nav-link " aria-current="page" href="/signup">Signup</a>
-        <a class="nav-link" href="/login">Login</a>
+        <a class="nav-link " aria-current="page" href="/signup"><b>Signup</b></a>
+        <a class="nav-link" href="/login"><b>Login</b></a>
         <% } %>
          <% if(currUser){%>
         <a class="nav-link" href="/logout">Logout</a>
