--- a/backend/views/listings/edit.ejs
+++ b/backend/views/listings/edit.ejs
@@ -3,7 +3,7 @@
     <div class="row mt-3">
         <div class="col-8 offset-2"> 
          <h3>Edit your listing</h3>
-      <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation">
+      <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation" enctype="multipart/form-data">
         <div class="mb-3 ">
             <label for="title" class="form-label">Title</label>
             <input name="listing[title]" value="<%=listing.title%>" type="text" class="form-control" required>
@@ -18,8 +18,8 @@
 
         </div>
         <div class="mb-3">
-            <label for="image" class="form-label">Image</label>
-            <input name="listing[image]" value="<%=listing.image%>" type="text" class="form-control">
+            <label for="image" class="form-label">Upload Image</label>
+            <input name="listing[image]" type="file" class="form-control">
         </div>
        <div class="row">
           <div class="mb-3 col-md-4">
