--- a/backend/views/listings/index.ejs
+++ b/backend/views/listings/index.ejs
@@ -1,16 +1,69 @@
 <%- layout("/layouts/biolerplate")%>
 <body>
-    <h3>All Listings</h3>
-   <div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-1">
+    <style>
+        #filters{
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+        }
+        .filter{
+            text-align: center;
+            margin-right: 2rem;
+            margin-top: 2rem;
+            opacity:0.7;
+        }
+        .filter:hover{
+            opacity: 1;
+            cursor: pointer;
+        }
+        .filter p{
+            font-size: 0.8rem;
+        }
+        .tax-toggle{
+            border: 1px solid black;
+            border-radius: 1rem;
+            height:3.25rem;
+            margin-left: 5rem;
+            padding: 1rem;
+            display: flex;
+            align-items: center;
+        }
+        .tax-info{
+            display: none;
+        }
+
+    </style>
+    <div id="filters">
+       <div class="filter"><i class="fa-solid fa-fire"></i><p>Trending</p></div>
+        <div class="filter"><i class="fa-solid fa-bed"></i><p>Rooms</p></div>
+        <div class="filter"><i class="fa-solid fa-bed"></i><p>Iconic cities </p></div>
+        <div class="filter"><i class="fa-solid fa-mountain"></i><p>Mountains</p></div>
+        <div class="filter"><i class="fa-brands fa-fort-awesome"></i><p>Castles</p></div>
+        <div class="filter"><i class="fa-solid fa-person-swimming"></i><p>Amazing pools</p></div>
+        <div class="filter"><i class="fa-solid fa-campground"></i><p>Camping</p></div>
+        <div class="filter"><i class="fa-solid fa-cow"></i><p>Farms</p></div> 
+        <div class="filter"><i class="fa-solid fa-snowflake"></i><p>Arctic</p></div> 
+        <div class="filter"><i class="fa-solid fa-igloo"></i><p>Domes</p></div> 
+        <div class="filter"><i class="fa-solid fa-ferry"></i><p>Boats</p></div> 
+        <div class="tax-toggle">
+            <div class="form-check form-switch">
+              <input class="form-check-input" type="checkbox" role="switch" id="switchCheckDefault">
+              <label class="form-check-label" for="switchCheckDefault">Display Total After Taxes</label>
+           </div>
+        </div>
+
+    </div>
+   <div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-1 mt-3">
     <%for(let listing of allListings){%>
         <a href="/listings/<%= listing._id %>" class="list-card">
       <div class="card col listing-card">
-         <img src="<%= listing.image  %>" class="card-img-top" alt="listing_img" style="height: 20rem;">
+         <img src="<%= listing.image.url%>" class="card-img-top" alt="listing_img" style="height: 20rem;">
          <div class="card-img-overlay"></div>
           <div class="card-body">
            <p class="card-text">
             <b><%= listing.title %></b><br/>
                &#8377;<%= listing.price ? listing.price.toLocaleString("en-In"):"N/A" %>/night 
+               <i class="tax-info">&nbsp;&nbsp;+18%GST</i>
            </p>
           </div>
         </div>
@@ -18,6 +71,18 @@
     <% } %>
 </div>
 
-   
+   <script>
+    let taxSwitch=document.getElementById("switchCheckDefault");
+    taxSwitch.addEventListener("click",()=>{
+        let taxInfo=document.getElementsByClassName("tax-info");
+        for(info of taxInfo){
+            if(info.style.display !="inline"){
+                info.style.display="inline";
+            }else{
+                info.style.display="none";
+            }
+        }
+    });
+   </script>
     
 </body>
