--- a/backend/views/listings/show.ejs
+++ b/backend/views/listings/show.ejs
@@ -5,7 +5,7 @@
              <h3><%= listDetails.title %></h3>
          </div>
     <div class="card col-6 offset-3 show-card listing-card">
-         <img src="<%= listDetails.image %>" class="card-img-top show-img" alt="...">
+         <img src="<%= listDetails.image.url %>" class="card-img-top show-img" alt="...">
         <div class="card-body">
                 <p class="card-text">Owned By-<%= listDetails.owner.username %></p>
                 <p class="card-text"><%= listDetails.description %></p>
